fixed overlap bug

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,84 +1,93 @@
 header {
-	height: 100vh;
-	padding-top: 7rem;
-	overflow: hidden;
+  /* height: 50rem; */
+  padding-top: 7rem;
+  /* overflow: hidden; */
 }
 
 .header__container {
-	text-align: center;
-	height: 100%;
-	position: relative;
+  text-align: center;
+  height: 100%;
+  /* position: relative; */
 }
 
 /* -------- CTA STYLING ------- */
 .cta {
-	margin-top: 2.5rem;
-	display: flex;
-	gap: 1rem;
-	justify-content: center;
+  margin-top: 2.5rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
 }
 
 /* ------ HEADER SOCIALS ------ */
 .header__socials {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 0.8rem;
-	position: absolute;
-	bottom: 3rem;
-	font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.8rem;
+  position: absolute;
+  left: 2.5rem;
+  bottom: 3rem;
+  font-size: 2rem;
 }
 
 .header__socials::after {
-	content: "";
-	width: 1px;
-	height: 2rem;
-	background: var(--color-primary);
+  content: "";
+  width: 1px;
+  height: 2rem;
+  background: var(--color-primary);
 }
 
 /* --------- ME IMAGE --------- */
 .me {
-	background: linear-gradient(var(--color-primary), transparent);
-	width: 22rem;
-	height: 30rem;
-	position: absolute;
-	left: calc(50% - 11rem);
-	margin-top: 4rem;
-	border-radius: 12rem 12rem 0 0;
-	overflow: hidden;
-	padding: 5rem 1.5rem;
+  background: linear-gradient(var(--color-primary), transparent);
+  width: 22rem;
+  height: 30rem;
+  /* position: absolute; */
+  /* left: calc(50% - 11rem); */
+  margin: 4rem auto;
+  border-radius: 12rem 12rem 0 0;
+  overflow: hidden;
+  padding: 5rem 1.5rem;
 }
 
-/* -------- SCROLL UP -------- */
-.scroll__up {
-	position: absolute;
-	right: -2.3rem;
-	bottom: 5rem;
-	transform: rotate(90deg);
-	font-weight: 200;
-	font-size: 2rem;
+/* -------- SCROLL DOWN -------- */
+.scroll__down {
+  position: absolute;
+  right: -2.3rem;
+  bottom: 5rem;
+  transform: rotate(90deg);
+  font-weight: 200;
+  font-size: 2rem;
 }
 
 /* ----- MEDIUM MEDIA QUERY ----- */
 @media screen and (max-width: 1024px) {
-	header {
-		height: 68vh;
-	}
+  .scroll__down {
+    bottom: 21vh;
+  }
 
-    .header__socials,
-	.scroll__up {
-		font-size: 1.4rem;
-	}
+  .header__socials {
+    bottom: 17vh;
+  }
+
+  .header__socials,
+  .scroll__down {
+    font-size: 1.4rem;
+  }
 }
 
 /* ----- SMALL MEDIA QUERY ----- */
 @media screen and (max-width: 600px) {
-	header {
-		height: 100vh;
-	}
 
-	.header__socials,
-	.scroll__up {
-		display: none;
-	}
+  .header__socials,
+  .scroll__down {
+    display: none;
+  }
 }
+
+/* ----- XSMALL MEDIA QUERY ----- */
+@media screen and (max-width: 400px) {
+	.me {
+		width: auto;
+	}
+  }
